@startuml YukLomba Class Diagram

skinparam class {
    BackgroundColor<<Controller>> #FFCCCC
    BackgroundColor<<Service>> #CCFFCC
    BackgroundColor<<Repository>> #CCCCFF
    ArrowColor #444444
    BorderColor #444444
}

' ===== Controllers =====
package "Controllers" {
class AuthController <<Controller>> {
    + Register(c *fiber.ctx)
    + Login(c *fiber.ctx)
    + GoogleOAuth(c *fiber.ctx)
    + GoogleCallback(c *fiber.ctx)
    + ValidateToken(c *fiber.ctx)
    + CompleteRegistration(c *fiber.ctx)
}

class CompetitionController <<Controller>> {
    + GetCompetition(c *fiber.ctx)
    + GetAllCompetitions(c *fiber.ctx)
    + CreateCompetition(c *fiber.ctx)
    + UpdateCompetition(c *fiber.ctx)
    + DeleteCompetition(c *fiber.ctx)
    + RegisterToCompetition(c *fiber.ctx)
    + GetCompetitionRegistrants(c *fiber.ctx)
}

class OrganizationController <<Controller>> {
    + GetOrganization(c *fiber.ctx)
    + GetAllOrganizations(c *fiber.ctx)
    + CreateOrganization(c *fiber.ctx)
    + UpdateOrganization(c *fiber.ctx)
    + DeleteOrganization(c *fiber.ctx)
}

class UserController <<Controller>> {
    + GetUser(c *fiber.ctx)
    + GetAllUsers(c *fiber.ctx)
    + UpdateUser(c *fiber.ctx)
    + GetUserRegistrations(c *fiber.ctx)
}
}
package "Services" {
' ===== Services =====
class AuthService <<Service>> {
    + Register(req *dto.RegisterRequest) (*entity.User, error)
    + Login(req *dto.LoginRequest) (*dto.TokenResponse, error)
    + GetGoogleOauthUrl() (string, error)
    + SignInWithGoogle(code string, state string) (*dto.TokenResponse, error)
    + ValidateToken(token string) (*util.JWTClaims, error)
    + CompleteRegistration(userID uuid.UUID, role string) (*entity.User, error)
}

class CompetitionService <<Service>> {
    + GetCompetition(id uuid.UUID) (*entity.Competition, error)
    + GetAllCompetitions(filter *dto.CompetitionFilter) ([]*entity.Competition, error)
    + CreateCompetition(authInfo *dto.AuthInfo, competition *entity.Competition) error
    + UpdateCompetition(authInfo *dto.AuthInfo, id uuid.UUID, data *map[string]interface{}) error
    + DeleteCompetition(authInfo *dto.AuthInfo, id uuid.UUID) error
    + RegisterUserToCompetition(authInfo *dto.AuthInfo, competitionID uuid.UUID) error
    + GetCompetitionsByOrganizer(organizerID uuid.UUID) ([]*entity.Competition, error)
}

class OrganizationService <<Service>> {
    + GetOrganization(id uuid.UUID) (*entity.Organization, error)
    + GetAllOrganizations() ([]*entity.Organization, error)
    + CreateOrganization(org *entity.Organization, authInfo *dto.AuthInfo) error
    + UpdateOrganization(org *entity.Organization, authInfo *dto.AuthInfo) error
    + DeleteOrganization(id uuid.UUID, authInfo *dto.AuthInfo) error
}

class UserService <<Service>> {
    + GetUser(id uuid.UUID) (*entity.User, error)
    + GetAllUsers() ([]*entity.User, error)
    + UpdateUser(id uuid.UUID, data *map[string]interface{}) error
    + GetAllUserRegistration(id uuid.UUID) ([]*entity.Registration, error)
}
}
' ===== Repositories =====
package "Repositories" {
interface UserRepository <<Repository>> {
    + FindByID(id uuid.UUID) (*entity.User, error)
    + FindByEmail(email string) (*entity.User, error)
    + FindByUsername(username string) (*entity.User, error)
    + FindAll() ([]*entity.User, error)
    + Create(user *entity.User) error
    + Update(id uuid.UUID, data *map[string]interface{}) error
    + FindAllRegistration(userID uuid.UUID) ([]*entity.Registration, error)
}

interface CompetitionRepository <<Repository>> {
    + FindByID(id uuid.UUID) (*entity.Competition, error)
    + FindWithFilter(filter *dto.CompetitionFilter) ([]*entity.Competition, error)
    + FindByOrganizerID(organizerID uuid.UUID) ([]*entity.Competition, error)
    + Create(competition *entity.Competition) error
    + Update(id uuid.UUID, data *map[string]interface{}) error
    + Delete(id uuid.UUID) error
    + FindUserRegistration(competitionID uuid.UUID, userID uuid.UUID) (*entity.Registration, error)
    + CreateUserRegistration(registration *entity.Registration) error
}

interface OrganizationRepository <<Repository>> {
    + FindByID(id uuid.UUID) (*entity.Organization, error)
    + FindAll() ([]*entity.Organization, error)
    + Create(org *entity.Organization) error
    + Update(org *entity.Organization) error
    + Delete(id uuid.UUID) error
}
}

' ===== Relationships =====
AuthController --> AuthService
CompetitionController --> CompetitionService
OrganizationController --> OrganizationService
UserController --> UserService

AuthService --> UserRepository
CompetitionService --> CompetitionRepository
OrganizationService --> OrganizationRepository
UserService --> UserRepository

@enduml
